# P4

./: CMakeLists.txt  README.md  UI_Framework_API_Documentation.md  partitions.csv  sdkconfig.defaults
components/: ui_common.c  ui_common.h
components/bsp_extra/: idf_component.yml
components/esp32_p4_wifi6_touch_lcd_4_3/: Kconfig  esp32_p4_wifi6_touch_lcd_4_3.c  idf_component.yml
components/esp32_p4_wifi6_touch_lcd_4_3/include/bsp/: esp32_p4_wifi6_touch_lcd_4_3.h
main/: CMakeLists.txt  hal_keypad.c  hal_keypad.h  idf_component.yml  main.c  template_ui.c  template_ui.h  ui_common.c  ui_common.h
main/UI/: ui.c  ui.h  ui_manager.c  ui_manager.h  ui_menu_manager.c
main/UI/Font/: chars.txt  cmd.txt  my_Font_72.c
main/UI/Image/: lv_img_zero.c
main/UI/comp/: ui_confirm.c  ui_confirm.h  ui_date_picker.c  ui_date_picker.h  ui_input.c  ui_input.h  ui_popup_datetime.c  ui_popup_datetime.h
main/UI/measurement/: measurement_gas.c  measurement_pressure.c  measurement_record.c  measurement_record.h  measurement_temp_diff.c  measurement_ui.h
main/UI/screens/: ui_calibration.c  ui_calibration.h  ui_fuel.c  ui_fuel.h  ui_fuel_measurement.c  ui_fuel_measurement.h  ui_home.c  ui_home.h  ui_manufacturer_info.c  ui_manufacturer_info.h  ui_measurement_unit.c  ui_measurement_unit.h  ui_pressure.c  ui_pressure.h  ui_saved_files.c  ui_saved_files.h  ui_service_record.c  ui_service_record.h  ui_setting.c  ui_setting.h  ui_system_info.c  ui_system_info.h  ui_temperature.c  ui_temperature.h
